JFX app launching problem solved